--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-multi-carousel": "^2.5.5",
     "react-scroll": "^1.8.0",
     "react-stickynode": "^3.0.3",
+    "reveal.js": "^4.1.0",
     "theme-ui": "^0.3.1",
     "typeface-dm-sans": "^1.1.3"
   },
